dev-25: add baseToken, withdraw trade logic and handlers, refactor
